# claviculario

./: .dockerignore  .env.example  .gitignore  Dockerfile  FRONTEND_ENDPOINTS.md  FRONTEND_README.md  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
ESP32-C3-tecladinho/: Buzzer.cpp  Buzzer.h  Clock.cpp  Clock.h  Weather.cpp  Weather.h  diagram.json  libraries.txt  main.cpp  wokwi-project.txt
REQUISITOS_MD/: BACKEND_REQUISITOS.md  PROJECT_DESCRIPTION.md  REQUISITOS.md
autorizacoes/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  views.py
autorizacoes/migrations/: 0001_initial.py  0002_initial.py
chaves/: admin.py  forms.py  models.py  serializers.py  views.py
chaves/migrations/: 0001_initial.py
config/: asgi.py  celery.py  routing.py  settings.py  urls.py
core/: permissions.py  tests_api.py  views.py
eventos/: admin.py  consumers.py  models.py  realtime.py  serializers.py  services.py  views.py
eventos/migrations/: 0001_initial.py  0002_initial.py
front-claviculario-main/: README.md  vite.config.js
front-claviculario-main/src/: App.jsx  index.css
hardware/: apps.py  services.py  views.py
operacoes/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  signals.py  tasks.py  views.py
relatorios/: forms.py  serializers.py  services.py  views.py
salas/: admin.py  forms.py  models.py  views.py
shared/: security.py
timetable/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  views.py
usuarios/: admin.py  forms.py  models.py  serializers.py  views.py
(+29 files in other folders)
