[project]
name = "claviculario-pwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"celery>=5.5,<6.0",
	"channels>=4.3,<5.0",
	"channels-redis>=4.3,<5.0",
	"daphne>=4.2,<5.0",
	"dj-database-url>=3.0,<4.0",
	"django>=5.2,<6.0",
	"django-celery-beat>=2.8,<3.0",
	"django-filter>=25.1,<26.0",
	"djangorestframework>=3.16,<4.0",
	"djangorestframework-simplejwt>=5.5,<6.0",
	"psycopg2-binary>=2.9,<3.0",
	"python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "tab"
